--- a/src/components/CreateLogo/index.html
+++ b/src/components/CreateLogo/index.html
@@ -1,92 +1,154 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-</head>
-
-<body>
-  <div class="work-station-content" style="
+  <body>
+    <div
+      class="work-station-content"
+      style="
         background-color: rgb(255, 255, 255);
         margin-top: 90px;
         box-shadow: rgba(71, 80, 89, 0.15) 0px 5px 20px;
-      ">
-    <div class="base-component sc-bdVaJa cwoGMT" width="66.79116218208071" height="66.79116218208071" rotate="0" style="
+      "
+    >
+      <div
+        class="base-component sc-bdVaJa cwoGMT"
+        width="66.79116218208071"
+        height="66.79116218208071"
+        rotate="0"
+        style="
           top: 170.104px;
           left: 99px;
           width: 66.7912px;
           height: 66.7912px;
           transform: rotateZ(0deg);
-        ">
-      <div class="image-component sc-htpNat enshqJ" width="66.79116218208071" height="66.79116218208071"
-        style="width: 66.7912px; height: 66.7912px">
-        <div class="sc-bxivhb fPcvdL">
-          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xlink="http://www.w3.org/1999/xlink"
-            xmlns:svgjs="http://svgjs.com/svgjs" width="100%" height="100%" viewBox="0 0 100 100">
-            <g fill="#212121">
-              <path d="M24 0h76v76c0 13.255-10.745 24-24 24H0V24C0 10.745 10.745 0 24 0z"></path>
-            </g>
-          </svg>
+        "
+      >
+        <div
+          class="image-component sc-htpNat enshqJ"
+          width="66.79116218208071"
+          height="66.79116218208071"
+          style="width: 66.7912px; height: 66.7912px"
+        >
+          <div class="sc-bxivhb fPcvdL">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              version="1.1"
+              xlink="http://www.w3.org/1999/xlink"
+              xmlns:svgjs="http://svgjs.com/svgjs"
+              width="100%"
+              height="100%"
+              viewBox="0 0 100 100"
+            >
+              <g fill="#212121">
+                <path
+                  d="M24 0h76v76c0 13.255-10.745 24-24 24H0V24C0 10.745 10.745 0 24 0z"
+                ></path>
+              </g>
+            </svg>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="base-component sc-bdVaJa cwoGMT" width="42.59135244483884" height="35.523194383864514" rotate="0" style="
+      <div
+        class="base-component sc-bdVaJa cwoGMT"
+        width="42.59135244483884"
+        height="35.523194383864514"
+        rotate="0"
+        style="
           top: 185.738px;
           left: 111.1px;
           width: 42.5914px;
           height: 35.5232px;
           transform: rotateZ(0deg);
-        ">
-      <div class="text-component sc-ifAKCX ehsxJr" width="42.59135244483884" height="35.523194383864514"
-        style="width: 42.5914px; height: 35.5232px">
-        <div class="sc-EHOje ifTULJ">
-          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xlink="http://www.w3.org/1999/xlink"
-            xmlns:svgjs="http://svgjs.com/svgjs" width="100%" height="100%"
-            viewBox="-3.559999942779541 -32.5099983215332 42.59000015258789 35.519996643066406">
-            <g fill="#ffffff">
-              <path
-                d="M30.51 -18.79C30.05 -17.54 29.31 -15.61 28.27 -13C27.24 -10.38 25.46 -6.52 22.94 -1.41L28.36 3.01C30.22 -1.19 31.69 -4.65 32.79 -7.39C33.4 -8.91 34.13 -10.8 35 -13.06C35.87 -15.33 37.21 -19.41 39.03 -25.31L32.51 -30.92C26.86 -22.77 21.61 -15.76 16.78 -9.9C17.66 -15.28 19 -20.85 20.79 -26.63L14.09 -32.51C10.41 -27.71 6.9 -22.6 3.56 -17.19C1.64 -14.06 -0.73 -9.64 -3.56 -3.92L1.32 0.64C2.51 -1.92 3.62 -4.23 4.65 -6.29C7.24 -11.55 10.17 -16.8 13.45 -22.03C12.15 -17.34 10.81 -10.88 9.44 -2.64L14.27 1.55C19.87 -5.14 25.28 -11.92 30.51 -18.79Z">
-              </path>
-            </g>
-          </svg>
+        "
+      >
+        <div
+          class="text-component sc-ifAKCX ehsxJr"
+          width="42.59135244483884"
+          height="35.523194383864514"
+          style="width: 42.5914px; height: 35.5232px"
+        >
+          <div class="sc-EHOje ifTULJ">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              version="1.1"
+              xlink="http://www.w3.org/1999/xlink"
+              xmlns:svgjs="http://svgjs.com/svgjs"
+              width="100%"
+              height="100%"
+              viewBox="-3.559999942779541 -32.5099983215332 42.59000015258789 35.519996643066406"
+            >
+              <g fill="#ffffff">
+                <path
+                  d="M30.51 -18.79C30.05 -17.54 29.31 -15.61 28.27 -13C27.24 -10.38 25.46 -6.52 22.94 -1.41L28.36 3.01C30.22 -1.19 31.69 -4.65 32.79 -7.39C33.4 -8.91 34.13 -10.8 35 -13.06C35.87 -15.33 37.21 -19.41 39.03 -25.31L32.51 -30.92C26.86 -22.77 21.61 -15.76 16.78 -9.9C17.66 -15.28 19 -20.85 20.79 -26.63L14.09 -32.51C10.41 -27.71 6.9 -22.6 3.56 -17.19C1.64 -14.06 -0.73 -9.64 -3.56 -3.92L1.32 0.64C2.51 -1.92 3.62 -4.23 4.65 -6.29C7.24 -11.55 10.17 -16.8 13.45 -22.03C12.15 -17.34 10.81 -10.88 9.44 -2.64L14.27 1.55C19.87 -5.14 25.28 -11.92 30.51 -18.79Z"
+                ></path>
+              </g>
+            </svg>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="base-component sc-bdVaJa cwoGMT" width="2.1714771308676886" height="66.79116218208071" rotate="0" style="
+      <div
+        class="base-component sc-bdVaJa cwoGMT"
+        width="2.1714771308676886"
+        height="66.79116218208071"
+        rotate="0"
+        style="
           top: 170.104px;
           left: 191.306px;
           width: 2.17148px;
           height: 66.7912px;
           transform: rotateZ(0deg);
-        ">
-      <div class="line-component sc-cSHVUG ccjezd" width="2.1714771308676886" height="66.79116218208071"
-        style="width: 2.17148px; height: 66.7912px"></div>
-    </div>
-    <div class="base-component sc-bdVaJa cwoGMT" width="342.00764811166096" height="46.38275151533383" rotate="0" style="
+        "
+      >
+        <div
+          class="line-component sc-cSHVUG ccjezd"
+          width="2.1714771308676886"
+          height="66.79116218208071"
+          style="width: 2.17148px; height: 66.7912px"
+        ></div>
+      </div>
+      <div
+        class="base-component sc-bdVaJa cwoGMT"
+        width="342.00764811166096"
+        height="46.38275151533383"
+        rotate="0"
+        style="
           top: 180.309px;
           left: 218.992px;
           width: 342.008px;
           height: 46.3828px;
           transform: rotateZ(0deg);
-        ">
-      <div class="text-component sc-ifAKCX ehsxJr" width="342.00764811166096" height="46.38275151533383"
-        style="width: 342.008px; height: 46.3828px">
-        <div class="sc-EHOje ifTULJ">
-          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xlink="http://www.w3.org/1999/xlink"
-            xmlns:svgjs="http://svgjs.com/svgjs" width="100%" height="100%"
-            viewBox="5.150000095367432 -45.599998474121094 342 46.37999725341797">
-            <g fill="#212121">
-              <path
-                d="M42.6 -44.95C41.61 -44.95 40.98 -44.45 40.72 -43.45L30.88 -14.2C29.88 -11.03 29.25 -8.97 28.99 -8.01L27.56 -8.01C27.03 -9.92 26.43 -11.96 25.73 -14.14L15.9 -43.45C15.55 -44.45 14.92 -44.95 14.01 -44.95L8.86 -44.95C7.6 -44.95 6.97 -44.32 6.97 -43.06L5.15 0L9.38 0L11.07 -41.37L12.44 -41.37L24.17 -6.12C24.47 -5.17 25.12 -4.69 26.12 -4.69L30.42 -4.69C31.42 -4.69 32.07 -5.17 32.38 -6.12L44.04 -41.37L45.47 -41.37L47.23 0L51.46 0L49.57 -43.06C49.57 -44.32 48.95 -44.95 47.69 -44.95Z M63.45 -44.82C62.54 -44.82 62.08 -44.36 62.08 -43.45L62.08 -39.67C62.08 -38.76 62.54 -38.3 63.45 -38.3L65.34 -38.3C66.25 -38.3 66.71 -38.76 66.71 -39.67L66.71 -43.45C66.71 -44.36 66.25 -44.82 65.34 -44.82ZM66.45 0L66.45 -31.53L62.34 -31.53L62.34 0Z M100.65 -3.52C98.17 -3.04 95.11 -2.8 91.46 -2.8C87.29 -2.8 84.39 -3.71 82.77 -5.54C81.14 -7.36 80.32 -10.77 80.32 -15.76C80.32 -20.76 81.14 -24.18 82.77 -26.03C84.39 -27.87 87.29 -28.79 91.46 -28.79C94.76 -28.79 97.56 -28.62 99.87 -28.27L100.52 -30.94C97.91 -31.9 94.68 -32.38 90.81 -32.38C85.38 -32.38 81.56 -31.13 79.35 -28.63C77.13 -26.13 76.02 -21.85 76.02 -15.76C76.02 -9.68 77.13 -5.41 79.35 -2.93C81.56 -0.46 85.38 0.78 90.81 0.78C94.46 0.78 97.89 0.3 101.1 -0.65Z M128.14 -32.38L126.77 -32.38C122.65 -32.38 118 -30.36 112.83 -26.32L112.37 -31.53L109.18 -31.53L109.18 0L113.35 0L113.35 -23.58C116.26 -25.32 118.65 -26.57 120.52 -27.33C122.38 -28.09 124.23 -28.47 126.05 -28.47L127.62 -28.47Z M146.7 -32.38C141.41 -32.38 137.66 -31.13 135.47 -28.63C133.27 -26.13 132.18 -21.85 132.18 -15.76C132.18 -9.73 133.27 -5.46 135.47 -2.96C137.66 -0.47 141.41 0.78 146.7 0.78C152 0.78 155.74 -0.46 157.91 -2.93C160.08 -5.41 161.17 -9.68 161.17 -15.76C161.17 -21.85 160.08 -26.13 157.91 -28.63C155.74 -31.13 152 -32.38 146.7 -32.38ZM146.7 -28.79C150.53 -28.79 153.18 -27.86 154.65 -25.99C156.13 -24.13 156.87 -20.72 156.87 -15.76C156.87 -10.81 156.13 -7.4 154.65 -5.54C153.18 -3.67 150.53 -2.74 146.7 -2.74C142.88 -2.74 140.23 -3.67 138.76 -5.54C137.28 -7.4 136.54 -10.81 136.54 -15.76C136.54 -20.72 137.28 -24.13 138.76 -25.99C140.23 -27.86 142.88 -28.79 146.7 -28.79Z M194.91 -14.85L199.86 0L204.29 0L189.24 -43.71C188.98 -44.54 188.42 -44.95 187.55 -44.95L182.66 -44.95C181.8 -44.95 181.23 -44.54 180.97 -43.71L165.92 0L170.35 0L175.3 -14.85ZM193.67 -18.57L176.54 -18.57L182.99 -37.91L184.23 -41.56L186.05 -41.56C186.18 -41.13 186.4 -40.47 186.7 -39.58C187.01 -38.68 187.18 -38.13 187.22 -37.91Z M233.48 0L236.67 0L236.67 -45.6L232.57 -45.6L232.57 -35.5C232.57 -32.81 232.65 -30.75 232.83 -29.31C228.87 -31.36 224.9 -32.38 220.9 -32.38C216.78 -32.38 213.78 -31.12 211.91 -28.6C210.05 -26.08 209.11 -21.82 209.11 -15.83C209.11 -10.05 209.99 -5.84 211.75 -3.19C213.51 -0.54 216.39 0.78 220.38 0.78C224.51 0.78 228.72 -1.11 233.02 -4.89ZM232.57 -7.88C230.13 -6.01 228.14 -4.71 226.57 -3.97C225.01 -3.24 223.34 -2.87 221.56 -2.87C218.56 -2.87 216.45 -3.81 215.24 -5.7C214.02 -7.59 213.41 -10.99 213.41 -15.9C213.41 -20.76 214.03 -24.11 215.27 -25.96C216.51 -27.81 218.67 -28.73 221.75 -28.73C224.49 -28.73 228.09 -27.97 232.57 -26.45Z M251.07 -31.53L247.68 -31.53L247.68 0L251.78 0L251.78 -23.39C254.52 -25.38 256.7 -26.79 258.33 -27.59C259.96 -28.39 261.62 -28.79 263.31 -28.79C265.22 -28.79 266.64 -28.31 267.55 -27.33C268.46 -26.35 268.92 -24.78 268.92 -22.61L268.92 0L272.89 0L272.89 -23.32C275.63 -25.36 277.8 -26.79 279.4 -27.59C281.01 -28.39 282.68 -28.79 284.42 -28.79C286.33 -28.79 287.73 -28.31 288.62 -27.33C289.51 -26.35 289.98 -24.78 290.02 -22.61L290.02 0L294.13 0L294.13 -23.71C294.13 -26.54 293.41 -28.69 291.98 -30.16C290.54 -31.64 288.48 -32.38 285.79 -32.38C281.62 -32.38 277.23 -30.4 272.63 -26.45C271.76 -30.4 269.09 -32.38 264.62 -32.38C260.4 -32.38 255.97 -30.36 251.33 -26.32Z M306.18 -44.82C305.27 -44.82 304.81 -44.36 304.81 -43.45L304.81 -39.67C304.81 -38.76 305.27 -38.3 306.18 -38.3L308.07 -38.3C308.98 -38.3 309.44 -38.76 309.44 -39.67L309.44 -43.45C309.44 -44.36 308.98 -44.82 308.07 -44.82ZM309.17 0L309.17 -31.53L305.07 -31.53L305.07 0Z M323.77 -31.53L320.31 -31.53L320.31 0L324.48 0L324.48 -23.32C327.44 -25.23 329.88 -26.62 331.81 -27.49C333.75 -28.36 335.67 -28.79 337.58 -28.79C339.53 -28.79 340.93 -28.32 341.78 -27.36C342.63 -26.41 343.05 -24.82 343.05 -22.61L343.05 0L347.15 0L347.15 -23.71C347.15 -29.49 344.33 -32.38 338.69 -32.38C334.21 -32.38 329.35 -30.36 324.09 -26.32Z">
-              </path>
-            </g>
-          </svg>
+        "
+      >
+        <div
+          class="text-component sc-ifAKCX ehsxJr"
+          width="342.00764811166096"
+          height="46.38275151533383"
+          style="width: 342.008px; height: 46.3828px"
+        >
+          <div class="sc-EHOje ifTULJ">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              version="1.1"
+              xlink="http://www.w3.org/1999/xlink"
+              xmlns:svgjs="http://svgjs.com/svgjs"
+              width="100%"
+              height="100%"
+              viewBox="5.150000095367432 -45.599998474121094 342 46.37999725341797"
+            >
+              <g fill="#212121">
+                <path
+                  d="M42.6 -44.95C41.61 -44.95 40.98 -44.45 40.72 -43.45L30.88 -14.2C29.88 -11.03 29.25 -8.97 28.99 -8.01L27.56 -8.01C27.03 -9.92 26.43 -11.96 25.73 -14.14L15.9 -43.45C15.55 -44.45 14.92 -44.95 14.01 -44.95L8.86 -44.95C7.6 -44.95 6.97 -44.32 6.97 -43.06L5.15 0L9.38 0L11.07 -41.37L12.44 -41.37L24.17 -6.12C24.47 -5.17 25.12 -4.69 26.12 -4.69L30.42 -4.69C31.42 -4.69 32.07 -5.17 32.38 -6.12L44.04 -41.37L45.47 -41.37L47.23 0L51.46 0L49.57 -43.06C49.57 -44.32 48.95 -44.95 47.69 -44.95Z M63.45 -44.82C62.54 -44.82 62.08 -44.36 62.08 -43.45L62.08 -39.67C62.08 -38.76 62.54 -38.3 63.45 -38.3L65.34 -38.3C66.25 -38.3 66.71 -38.76 66.71 -39.67L66.71 -43.45C66.71 -44.36 66.25 -44.82 65.34 -44.82ZM66.45 0L66.45 -31.53L62.34 -31.53L62.34 0Z M100.65 -3.52C98.17 -3.04 95.11 -2.8 91.46 -2.8C87.29 -2.8 84.39 -3.71 82.77 -5.54C81.14 -7.36 80.32 -10.77 80.32 -15.76C80.32 -20.76 81.14 -24.18 82.77 -26.03C84.39 -27.87 87.29 -28.79 91.46 -28.79C94.76 -28.79 97.56 -28.62 99.87 -28.27L100.52 -30.94C97.91 -31.9 94.68 -32.38 90.81 -32.38C85.38 -32.38 81.56 -31.13 79.35 -28.63C77.13 -26.13 76.02 -21.85 76.02 -15.76C76.02 -9.68 77.13 -5.41 79.35 -2.93C81.56 -0.46 85.38 0.78 90.81 0.78C94.46 0.78 97.89 0.3 101.1 -0.65Z M128.14 -32.38L126.77 -32.38C122.65 -32.38 118 -30.36 112.83 -26.32L112.37 -31.53L109.18 -31.53L109.18 0L113.35 0L113.35 -23.58C116.26 -25.32 118.65 -26.57 120.52 -27.33C122.38 -28.09 124.23 -28.47 126.05 -28.47L127.62 -28.47Z M146.7 -32.38C141.41 -32.38 137.66 -31.13 135.47 -28.63C133.27 -26.13 132.18 -21.85 132.18 -15.76C132.18 -9.73 133.27 -5.46 135.47 -2.96C137.66 -0.47 141.41 0.78 146.7 0.78C152 0.78 155.74 -0.46 157.91 -2.93C160.08 -5.41 161.17 -9.68 161.17 -15.76C161.17 -21.85 160.08 -26.13 157.91 -28.63C155.74 -31.13 152 -32.38 146.7 -32.38ZM146.7 -28.79C150.53 -28.79 153.18 -27.86 154.65 -25.99C156.13 -24.13 156.87 -20.72 156.87 -15.76C156.87 -10.81 156.13 -7.4 154.65 -5.54C153.18 -3.67 150.53 -2.74 146.7 -2.74C142.88 -2.74 140.23 -3.67 138.76 -5.54C137.28 -7.4 136.54 -10.81 136.54 -15.76C136.54 -20.72 137.28 -24.13 138.76 -25.99C140.23 -27.86 142.88 -28.79 146.7 -28.79Z M194.91 -14.85L199.86 0L204.29 0L189.24 -43.71C188.98 -44.54 188.42 -44.95 187.55 -44.95L182.66 -44.95C181.8 -44.95 181.23 -44.54 180.97 -43.71L165.92 0L170.35 0L175.3 -14.85ZM193.67 -18.57L176.54 -18.57L182.99 -37.91L184.23 -41.56L186.05 -41.56C186.18 -41.13 186.4 -40.47 186.7 -39.58C187.01 -38.68 187.18 -38.13 187.22 -37.91Z M233.48 0L236.67 0L236.67 -45.6L232.57 -45.6L232.57 -35.5C232.57 -32.81 232.65 -30.75 232.83 -29.31C228.87 -31.36 224.9 -32.38 220.9 -32.38C216.78 -32.38 213.78 -31.12 211.91 -28.6C210.05 -26.08 209.11 -21.82 209.11 -15.83C209.11 -10.05 209.99 -5.84 211.75 -3.19C213.51 -0.54 216.39 0.78 220.38 0.78C224.51 0.78 228.72 -1.11 233.02 -4.89ZM232.57 -7.88C230.13 -6.01 228.14 -4.71 226.57 -3.97C225.01 -3.24 223.34 -2.87 221.56 -2.87C218.56 -2.87 216.45 -3.81 215.24 -5.7C214.02 -7.59 213.41 -10.99 213.41 -15.9C213.41 -20.76 214.03 -24.11 215.27 -25.96C216.51 -27.81 218.67 -28.73 221.75 -28.73C224.49 -28.73 228.09 -27.97 232.57 -26.45Z M251.07 -31.53L247.68 -31.53L247.68 0L251.78 0L251.78 -23.39C254.52 -25.38 256.7 -26.79 258.33 -27.59C259.96 -28.39 261.62 -28.79 263.31 -28.79C265.22 -28.79 266.64 -28.31 267.55 -27.33C268.46 -26.35 268.92 -24.78 268.92 -22.61L268.92 0L272.89 0L272.89 -23.32C275.63 -25.36 277.8 -26.79 279.4 -27.59C281.01 -28.39 282.68 -28.79 284.42 -28.79C286.33 -28.79 287.73 -28.31 288.62 -27.33C289.51 -26.35 289.98 -24.78 290.02 -22.61L290.02 0L294.13 0L294.13 -23.71C294.13 -26.54 293.41 -28.69 291.98 -30.16C290.54 -31.64 288.48 -32.38 285.79 -32.38C281.62 -32.38 277.23 -30.4 272.63 -26.45C271.76 -30.4 269.09 -32.38 264.62 -32.38C260.4 -32.38 255.97 -30.36 251.33 -26.32Z M306.18 -44.82C305.27 -44.82 304.81 -44.36 304.81 -43.45L304.81 -39.67C304.81 -38.76 305.27 -38.3 306.18 -38.3L308.07 -38.3C308.98 -38.3 309.44 -38.76 309.44 -39.67L309.44 -43.45C309.44 -44.36 308.98 -44.82 308.07 -44.82ZM309.17 0L309.17 -31.53L305.07 -31.53L305.07 0Z M323.77 -31.53L320.31 -31.53L320.31 0L324.48 0L324.48 -23.32C327.44 -25.23 329.88 -26.62 331.81 -27.49C333.75 -28.36 335.67 -28.79 337.58 -28.79C339.53 -28.79 340.93 -28.32 341.78 -27.36C342.63 -26.41 343.05 -24.82 343.05 -22.61L343.05 0L347.15 0L347.15 -23.71C347.15 -29.49 344.33 -32.38 338.69 -32.38C334.21 -32.38 329.35 -30.36 324.09 -26.32Z"
+                ></path>
+              </g>
+            </svg>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
